# pdf-scan

./: .env  .env.example  .env.test  .gitignore  CLICKHOUSE_IMPLEMENTATION.md  PLAN.md  README.md  docker-compose.yml  init-db.sql  pyproject.toml  render.yaml  requirements.txt  setup.sh
docs/: api.md  async_clickhouse.md  clickhouse.md  deployment.md  schema.md
scripts/: README.md  init_clickhouse_backends.py  quick_upload_test.sh  run_all_tests.sh  test_clickhouse.sh  test_cloud_deployment.sh  test_findings.sh  test_health.sh  test_invalid_file.sh  test_metrics.sh  test_upload.sh  test_upload_pii.sh
src/pdf_scan/: __init__.py  app.py  main.py  models.py
src/pdf_scan/db/: __init__.py  backends.py  factory.py
src/pdf_scan/db/analytics/: __init__.py  metrics_repository.py
src/pdf_scan/db/analytics/impl/: __init__.py  clickhouse_metrics_repository.py  in_memory_metrics_repository.py
src/pdf_scan/db/core/: __init__.py  document_repository.py  finding_repository.py
src/pdf_scan/db/core/impl/: __init__.py  clickhouse_document_repository.py  clickhouse_finding_repository.py  in_memory_document_repository.py  in_memory_finding_repository.py
src/pdf_scan/models/: __init__.py  entities.py
src/pdf_scan/processing/: __init__.py  document_processor.py
src/pdf_scan/scanner/: __init__.py  pdf_scanner_interface.py  regex_scanner.py
src/pdf_scan/validation/: __init__.py  file_validator.py
tests/: README.md  __init__.py  test_basic.py  test_models.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_api.py
tests/unit/db/: __init__.py  test_backends.py  test_factory.py
tests/unit/db/analytics/: __init__.py
tests/unit/db/analytics/impl/: __init__.py  test_in_memory_metrics_repository.py
tests/unit/db/core/: __init__.py
tests/unit/db/core/impl/: __init__.py  test_in_memory_document_repository.py  test_in_memory_finding_repository.py
tests/unit/processing/: __init__.py
tests/unit/scanner/: __init__.py  test_regex_scanner.py
tests/unit/validation/: __init__.py  test_file_validator.py
